feat(gutenberg): add theme.json for global gutenberg styles, remove unused theme-supports, fix spacing variables, add editor js file with basic settings

--- a/package.json
+++ b/package.json
@@ -8,22 +8,24 @@
   },
   "dependencies": {
     "css-reset-and-normalize": "^2.3.5",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^5.0.0",
+    "node-sass": "^6.0.1",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/register": "^7.13.8",
-    "autoprefixer": "^9.0.0",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/register": "^7.15.3",
+    "autoprefixer": "^9.8.7",
     "babel-loader": "^8.2.2",
-    "browser-sync": "^2.26.14",
+    "browser-sync": "^2.27.5",
     "css-vars-ponyfill": "^1.17.2",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
-    "gulp-postcss": "^9.0.0",
+    "gulp-postcss": "^9.0.1",
     "gulp-sourcemaps": "^3.0.0",
     "object-fit-images": "^3.2.4",
     "vinyl-named": "^1.1.0",
