--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "@wordpress/dom-ready": "^3.3.0",
     "css-reset-and-normalize": "^2.3.5",
-    "gulp-sass": "^5.0.0",
     "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
@@ -26,8 +25,10 @@
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "object-fit-images": "^3.2.4",
+    "sass": "^1.62.1",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^6.1.2",
     "yargs": "^16.2.0"
