feat(*) update package json, webpack and remove polyfills from js file

--- a/package.json
+++ b/package.json
@@ -8,26 +8,23 @@
   },
   "dependencies": {
     "@wordpress/dom-ready": "^3.3.0",
-    "css-reset-and-normalize": "^2.3.5",
-    "smoothscroll-polyfill": "^0.4.4"
+    "css-reset-and-normalize": "^2.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/register": "^7.15.3",
-    "autoprefixer": "^9.8.7",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^8.2.2",
-    "browser-sync": "^2.27.5",
-    "css-vars-ponyfill": "^1.17.2",
+    "browser-sync": "^3.0.2",
     "del": "^6.0.0",
-    "gulp": "^4.0.2",
+    "gulp": "^5.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^7.1.0",
+    "gulp-imagemin": "^6.2.0",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "object-fit-images": "^3.2.4",
+    "gulp-sourcemaps": "^2.6.5",
     "sass": "^1.62.1",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^6.1.2",
