feat(*): add wp db migrate to composer

--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,19 @@
     {
       "type": "composer",
       "url": "https://connect.advancedcustomfields.com"
+    },
+    {
+      "type": "composer",
+      "url": "https://composer.deliciousbrains.com"
     }
   ],
   "require": {
     "timber/timber": "^2.3",
-    "wpengine/advanced-custom-fields-pro": "^6.3"
+    "wpengine/advanced-custom-fields-pro": "^6.3",
+    "deliciousbrains-plugin/wp-migrate-db-pro": "*",
+    "deliciousbrains-plugin/wp-migrate-db-pro-cli": "*",
+    "deliciousbrains-plugin/wp-migrate-db-pro-media-files": "*",
+    "deliciousbrains-plugin/wp-migrate-db-pro-theme-plugin-files": "*"
   },
   "extra": {
     "installer-paths": {
